--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             default: 'arcade',
             arcade: {
                 gravity: {y: 300},
-                debug: true //Borda que indica os limites da imagem do personagem e a direção em que ele etsá indo.
+                debug: true //Borda que indica os limites da imagem do personagem e a direção em que ele está indo.
             }
         }
         };
@@ -62,7 +62,7 @@
 
 
         function create() {
-            // o que acontece aqui? RESPOSTA: criação do background com metade da largura e da altura do jogo.
+            //O que acontece aqui? RESPOSTA: criação do background com metade da largura e da altura do jogo.
             this.add.image(larguraJogo/2, alturaJogo/2, 'background'); //Criando o background.
 
 
