--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
     <body>
         <script>
+            //O que acontece aqui? RESPOSTA: definição da largura e da altura do jogo.
             const larguraJogo = 700;
             const alturaJogo = 850;
 
+            //O que essa parte faz? RESPOSTA: estabelece as configurações do jogo.
             const config = {
                 type: Phaser.AUTO,
                 width: larguraJogo,
@@ -27,27 +29,31 @@
                     default: 'arcade',
                     arcade: {
                         gravity: { y: 300 },
-                        debug: true
+                        debug: true  //Borda que indica os limites da imagem do personagem e a direção em que ele está indo.
                     }
                 }
             };
 
+             // O que acontece aqui? RESPOSTA: inicialização o jogo.
             const game = new Phaser.Game(config);
 
+            //Variáveis dos elementos usados no jogo
             var alien;
             var teclado;
             var fogo;
             var plataforma;
-            var plataforma2;
-            var plataforma3;
+            var plataforma2; //***TAREFA EXTRA: outra plataforma.
+            var plataforma3; //***TAREFA EXTRA: outra plataforma.
             var moeda;
             var moedaPegada = false;
             var pontuacao = 0;
             var placar;
             var fundoIndex = 0;
-            var fundos = ['fundo', 'fundo2'];
+            var fundos = ['fundo', 'fundo2']; //***TAREFA EXTRA: usando lista para trocar o fundo do jogo.
             var fundo;
 
+
+            //Carregando os as imagens dos elementos do jogo na tela
             function preload() {
                 this.load.image('fundo', 'assets/bg.png');
                 this.load.image('fundo2', 'assets/bg2.jpg');
@@ -57,42 +63,62 @@
                 this.load.image('moeda', 'assets/moeda.png');
             }
 
+
             function create() {
+                //Definindo as configurações de largura e altura do fundo, bem como sua posição em relação aos demais itens.
                 fundo = this.add.image(larguraJogo / 2, alturaJogo / 2, fundos[fundoIndex]);
                 fundo.setDepth(-1);
 
+
+                //Placar: recebe a pontuação.
                 placar = this.add.text(50, 150, 'Moedas:' + pontuacao, { fontSize: '45px', fill: '#495613' });
 
+
+                //Efeito turbo: começa desabilitado.
                 fogo = this.add.sprite(0, 0, 'turbo_nave');
                 fogo.setVisible(false, false);
 
+
+                //Alien: configurando a física do alien e delimitando a área em que ele deve ficar por meio do setColliderWorldBounds(true).
                 alien = this.physics.add.sprite(larguraJogo / 2, 0, 'player');
                 alien.setCollideWorldBounds(true);
 
+
+                //Habilitando os eventos no teclado (clique nas teclas).
                 teclado = this.input.keyboard.createCursorKeys();
 
+                //Plataforma 
                 plataforma = this.physics.add.staticImage(larguraJogo / 2, alturaJogo / 2, 'plataforma_tijolo');
                 this.physics.add.collider(alien, plataforma);
 
+                
+                //***TAREFA EXTRA: adicionando outros elementos na tela, no caso, duas plataformas.
                 plataforma2 = this.physics.add.staticImage(larguraJogo / 5, alturaJogo / 1.3, 'plataforma_tijolo');
                 this.physics.add.collider(alien, plataforma2);
 
                 plataforma3 = this.physics.add.staticImage(larguraJogo / 1.2, alturaJogo / 1.3, 'plataforma_tijolo');
                 this.physics.add.collider(alien, plataforma3);
 
+
+                //Configurando a física, a área delimitada e o quicar da moeda (respectivamente).
                 moeda = this.physics.add.sprite(larguraJogo / 2, 0, 'moeda');
                 moeda.setCollideWorldBounds(true);
                 moeda.setBounce(0.7);
+
+
+                //Criando barreira física entre moeda e as plataformas.
                 this.physics.add.collider(moeda, plataforma);
                 this.physics.add.collider(moeda, plataforma2);
                 this.physics.add.collider(moeda, plataforma3);
 
+
+                //Identificando se alien e moeda se sobrepõem (overlap), ou seja, se o alien pegou a moeda.
                 this.physics.add.overlap(alien, moeda, function () {
                     if (!moedaPegada) {
                         moeda.setVisible(false);
                         var posicaoMoeda_Y = Phaser.Math.RND.between(50, 650);
                         moeda.setPosition(posicaoMoeda_Y, 100);
-                        pontuacao += 1;
+                        pontuacao += 1; //A cada moeda pegada, o alien recebe um ponto.
                         placar.setText('Moedas: ' + pontuacao);
                         moeda.setVisible(true);
                         moedaPegada = true;
@@ -101,23 +127,29 @@
             }
 
             function update() {
+                //Verificando se os botões de esquerda, direita e para cima foram pressionados.
                 if (teclado.left.isDown) {
-                    alien.setVelocityX(-150);
+                    alien.setVelocityX(-150); //Movimento para esquerda.
                 } else if (teclado.right.isDown) {
-                    alien.setVelocityX(+150);
+                    alien.setVelocityX(+150); //Movimento para direita.
                 } else {
-                    alien.setVelocityX(0);
+                    alien.setVelocityX(0); //Sem movimento quando left e right não estão pressionados
                 }
 
                 if (teclado.up.isDown) {
-                    alien.setVelocityY(-150);
-                    ativarTurbo();
+                    alien.setVelocityY(-150); //Movimento para cima. É importante lembrar que a tecla down não é verificada porque o personagem já tem sua gravidade.
+                    ativarTurbo(); //Ativando o turbo quando o personagem sobre (tecla up).
                 } else {
-                    semTurbo();
+                    semTurbo(); //Se o personagem não estiver subindo (tecla up pressionada), o efeito turbo é desativado.
                 }
 
+                
+                //Posicionando o fogo em relação ao alien.
                 fogo.setPosition(alien.x, alien.y + alien.height / 2);
 
+
+                //***TAREFA EXTRA: usando lista para trocar o fundo do jogo.
+                //A cada 10 moedas coletadas (10 pontos) pelo jogador, o fundo troca com base nas imagens da lista.
                 if (pontuacao % 10 === 0 && pontuacao > 0) {
                     if (fundoIndex < fundos.length - 1) {
                         fundoIndex++;
@@ -130,10 +162,12 @@
                 moedaPegada = false;
             }
 
+            //Função para ativar o turbo do personagem.
             function ativarTurbo() {
                 fogo.setVisible(true);
             }
 
+            //Função para desativar o turbo do personagem.
             function semTurbo() {
                 fogo.setVisible(false);
             }
