--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             var placar;
             var fundos = ['fundo', 'fundo2', 'fundo3', 'fundo4']; //***TAREFA EXTRA: usando lista para trocar o fundo do jogo.
             var indiceDoFundo = 0;
-            var ultimaTrocaDeImagemDeFundo;
+            var ultimaTrocaDeImagemDeFundo = 0;
             var fundo;
 
 
