--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             var moedaPegada = false;
             var pontuacao = 0;
             var placar;
-            var fundos = ['fundo', 'fundo2', 'fundo3', 'fundo4']; //***TAREFA EXTRA: usando lista para trocar o fundo do jogo.
+            var fundos = ['fundo', 'fundo2']; //***TAREFA EXTRA: usando lista para trocar o fundo do jogo.
             var indiceDoFundo = 0;
             var ultimaTrocaDeImagemDeFundo = 0;
             var fundo;
@@ -58,8 +58,6 @@
             function preload() {
                 this.load.image('fundo', 'assets/bg.png');
                 this.load.image('fundo2', 'assets/bg2.jpg');
-                this.load.image('fundo3', 'assets/bg3.png');
-                this.load.image('fundo4', 'assets/bg4.png');
                 this.load.image('turbo_nave', 'assets/turbo.png');
                 this.load.image('alien', 'assets/alienigena.png');
                 this.load.image('plataforma_tijolo', 'assets/tijolos.png');
